tried to make the connection between the addressbar and uicontroller